@@ -23,12 +23,8 @@ configure-stamp:
 	dh_testdir
 	# Add here commands to configure the package.
 
-ifneq "$(wildcard /usr/share/misc/config.sub)" ""
-	cp -f /usr/share/misc/config.sub amora-cli/config.sub
-endif
-ifneq "$(wildcard /usr/share/misc/config.guess)" ""
-	cp -f /usr/share/misc/config.guess amora-cli/config.guess
-endif
+	dh_autotools-dev_updateconfig
+
 	cd amora-cli; ./configure --host=$(DEB_HOST_GNU_TYPE) --build=$(DEB_BUILD_GNU_TYPE) --prefix=/usr --mandir=\$${prefix}/share/man --infodir=\$${prefix}/share/info CFLAGS="$(CFLAGS)" LDFLAGS="-Wl,-z,defs"
 	# Does qmake-qt4 support cross-compiling?
 	$(MAKE) amora-applet/Makefile
